samples/_failures_safe/1761557568_c94bef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8877b68.c: In function ‘main’:
./samples/SAFE/__tmp_d8877b68.c:158:28: error: missing terminating " character
  158 |                     printf("\nMatrix A
      |                            ^~~~~~~~~~~
./samples/SAFE/__tmp_d8877b68.c:158:21: error: expected expression at end of input
  158 |                     printf("\nMatrix A
      |                     ^~~~~~
./samples/SAFE/__tmp_d8877b68.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d8877b68.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d8877b68.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d8877b68.c:158:21: error: expected declaration or statement at end of input
